Mapper: skeleton for Mapping Engine 	Some work on OWL object Elevator: skeleton for RDF Grounding Engine WWW: some www updates

--- a/trunk/www/css/style.css
+++ b/trunk/www/css/style.css
@@ -39,16 +39,16 @@ table.maintable {
 		border-collapse: collapse;
 }
 tr.topbar{
-		background:#7B7B7B;
 		width: 100%;
 		vertical-align:top;
 }
 tr.bottombar{
 		background:#7B7B7B;
+		color: #000000;
 		width: 100%;
-		vertical-align:center;
+		text-align:center;
 }
-tr.right{
+td.right{
 		text-align:right;
 }
 tr.maincontent{
@@ -60,6 +60,7 @@ img{
 		border: 0px;
 }
 
+div.center { text-align: center }
 SPAN.alignright { text-align: right }
 SPAN.maintitlebar { font-size: 12px; color: #FFFFFF }
 SPAN.titlebar { text-align: center; font-size: 12px; color: #FFFFFF; font-weight: bold }
